--- a/testeHTML/estilo.css
+++ b/testeHTML/estilo.css
@@ -15,9 +15,10 @@ h1{
 a{
 	background: #b9c941;
 	font-size: 40px;
-	margin-left: 600px;
+	margin-left: 500px;
 	text-decoration: none;
-	padding: 5px 10px;
+	padding-right: 200px;
+	padding-left: 200px;
 }
 /*Link*/
 a:link{
@@ -33,14 +34,12 @@ a:visited{
 /*Hover*/
 a:hover{
 	color: #fff;
-	background-size: 720px;
-	background: linear-gradient(red, yellow);
-	background: linear-gradient(20deg, red, yellow);
 	background: radial-gradient(yellow, green);
 }
 /*Active*/
 a:active{
 	color: #535353;
+	background: radial-gradient(yellow, blue);
 }
 
 
