--- a/testeHTML/estilo.css
+++ b/testeHTML/estilo.css
@@ -6,53 +6,38 @@
 body{
 	background: white;
 }
-h1{
-	margin-left: 600px;
-	font-size: 80px;
-	color: green;
-}
 
 a{
 	background: #b9c941;
-	font-size: 40px;
-	margin-left: 500px;
+	font-size: 30px;
+	margin-left: 30%;
 	text-decoration: none;
+	margin-bottom: 50px;
 	padding-right: 200px;
 	padding-left: 200px;
 }
 /*Link*/
 a:link{
-	color: gray;
+	color: black;
+	background: radial-gradient(#3399ff, #ccff99);
 }
 
 /*Visitados*/
 
 a:visited{
-	color: gray;
+	color: black;
+	background: radial-gradient(#3399ff, #ccff99);
 }
 
 /*Hover*/
 a:hover{
-	color: #fff;
-	background: radial-gradient(yellow, green);
+	color: white;
+	background: radial-gradient(yellow, red);
 }
 /*Active*/
 a:active{
-	color: #535353;
+	color: white;
 	background: radial-gradient(yellow, blue);
-}
-
-
-#bla{
-	margin-left: 350px;
-	padding-left: 300px;
-	background: linear-gradient(red, yellow);
-	background: linear-gradient(20deg, red, yellow);
-	background: radial-gradient(yellow, green);
-	width: 550px;
-	height: 50px;
-	font-size: 40px;
-	box-shadow: 10px 10px 10px black;
 }
 
 .verde{
